# 3-python-package-exercise-plant-3-0

./: .gitignore  Pipfile  README.md  example-program.py  pyproject.toml
.github/workflows/: build-test.yml  build.yml  cd-ci
src/: pyprankerror.py
src/ErrorPrank/: error_generator.py  generate_error
src/PyPrankError/: pyprankerror.py
tests/: test_error_generator.py  test_generate_crash_report.py  test_generate_error  test_generate_error.py  test_generate_stacktrace.py  test_hacked_message.py
