[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyprankerror"
description = "An example of a package developed with pyenv, built with build using setuptools, uploaded to PyPI using twine, and distributed via pip."
version = "1.0.0-py3.11"
authors = [
  { name="Foo Barstein", email="foo.barstein@onepotcooking.com" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["python", "package", "build", "tutorial"]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
"Homepage" = "https://github.com/software-students-fall2023/3-python-package-exercise-plant-3-0"
"Repository" = "https://github.com/software-students-fall2023/3-python-package-exercise-plant-3-0.git"
"Bug Tracker" = "https://github.com/software-students-fall2023/3-python-package-exercise-plant-3-0/issues"

[project.scripts]
pyprankerror = "pyprankerror.__main__:main"
